# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

SUBDIRS = \
	hex8 \
	quad4 \
	tet4 \
	tri3

dist_noinst_DATA = \
	README

# End of file 
